vanilla-k8s-deployment/02-frontend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: avengers
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      serviceAccountName: sa-frontend
      securityContext:
        {}
      containers:
        - name: frontend
          securityContext:
            {}
          image: "novarasa/app-showcase-frontend-nodejs:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8084
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: frontend
