vanilla-k8s-deployment/03-backend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: showcase
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      securityContext:
        {}
      containers:
        - name: backend
          securityContext:
            {}
          image: "novarasa/app-showcase-backend-java:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 5
          #   minReadySeconds: 30
          # readinessProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: http
          #   initialDelaySeconds: 25
          #   periodSeconds: 25
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: showcase
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: backend
