vanilla-k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: showcase-ingress
  namespace: avengers
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
          - path: /backend
            pathType: Prefix  
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
